Added info and some css for first recipe

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -10,15 +10,33 @@
     <title>Enchiladas</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Enchiladas</h1>
-    <a href="../index.html">Home</a>
+    <div class="main">
+      <h1>Enchiladas</h1>
+      <img class="enchiladas" src="../images/enchiladas.jpg" alt="A golden retriever puppy playing in a park">
+      <p class="description">Enchiladas are a traditional Mexican dish consisting of a corn tortilla rolled around a filling and covered with a chili-pepper sauce. The fillings can include a variety of ingredients like meats (beef, chicken), beans, rice, vegetables, or cheese. The dish is then served with the sauce poured over the top. </p>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>2 ¼ pounds small green tomatillos, husks removed</li>
+        <li>3 serrano peppers</li>
+        <li>2 cloves garlic</li>
+        <li>1 cup vegetable oil for frying</li>
+        <li>9 corn tortillas</li>
+        <li>3 cups water</li>
+        <li>4 teaspoons chicken bouillon granules</li>
+        <li>½ store-bought rotisserie chicken, meat removed and shredded</li>
+        <li>¼ head iceberg lettuce, shredded</li>
+        <li>1 cup cilantro leaves</li>
+        <li>1 (8 ounce) container Mexican crema, crema fresca</li>
+        <li>1 cup grated cotija cheese</li>
+      </ul>
+      <a href="../index.html">Home</a>
+    </div>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
     <script src="" async defer></script>
   </body>
 </html>
