--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/enchiladas.html">Enchiladas</a>
+    <div class="main">
+      <h1>Odin Recipes</h1>
+      <a href="recipes/enchiladas.html">Enchiladas</a>
+      <a href="recipes/pozole.html">Pozole</a>
+      <a href="recipes/churros.html">Churros</a>
+    </div>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
