--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -32,6 +32,16 @@
         <li>1 (8 ounce) container Mexican crema, crema fresca</li>
         <li>1 cup grated cotija cheese</li>
       </ul>
+      <h2>Steps</h2>
+      <ol>
+        <li>Cover a large griddle with aluminum foil and preheat to medium-high.</li>
+        <li>Cook tomatillos, serrano peppers, and garlic on the hot griddle, turning occasionally, until toasted and blackened — about 5 minutes for garlic, 10 minutes for peppers, and 15 minutes for tomatillos. Remove to a bowl and allow to cool.</li>
+        <li>Heat oil in a small, deep skillet to 350 degrees F (175 degrees C).</li>
+        <li>Lightly fry tortillas, one at a time, in hot oil until warmed through, 3 to 5 seconds per side. Drain on a paper towel-lined plate.</li>
+        <li>Place toasted tomatillos, serrano peppers, and garlic in a blender. Add water and blend until smooth; pour into a saucepan over medium heat and bring to a boil. Dissolve chicken bouillon in the mixture, reduce heat, and cook at a simmer until slightly thickened, about 10 minutes.</li>
+        <li>Soak tortillas in sauce, one at a time, for a few seconds. Fill each tortilla with shredded chicken and sprinkle with sauce. Roll up tortillas and place seam-side down in a serving dish.</li>
+        <li>Spoon a generous amount of sauce over rolled tortillas. Top with lettuce, cilantro, crema, and cotija cheese. Pour remaining sauce on top or serve on the side.</li>
+      </ol>
       <a href="../index.html">Home</a>
     </div>
     <!--[if lt IE 7]>
