--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="main">
       <h1>Odin Recipes</h1>
+      <img class="recipes" src="./images/recipes.jpg" alt="food ingredients">
       <a href="recipes/enchiladas.html">Enchiladas</a>
       <a href="recipes/pozole.html">Pozole</a>
       <a href="recipes/churros.html">Churros</a>
