--- a/recipes/churros.html
+++ b/recipes/churros.html
@@ -14,8 +14,8 @@
   </head>
   <body>
     <div class="main">
-      <h1>Mole</h1>
-      <img class="churros" src="../images/churros.jpg" alt="A golden retriever puppy playing in a park">
+      <h1>Churros</h1>
+      <img class="churros" src="../images/churros.jpg" alt="churros with their chococlate dip">
       <p class="description">A churro is a cinnamon- and sugar-topped fried pastry dough stick with Spanish and Portuguese origins. Churros are similar to doughnuts, but they have ridges because they are piped out of a pastry bag. Because they are fried instead of baked, churros have a fluffy and tender interior with a satisfyingly crispy exterior.</p>
       <h2>Ingredients</h2>
       <ul>
