--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -15,7 +15,7 @@
   <body>
     <div class="main">
       <h1>Enchiladas</h1>
-      <img class="enchiladas" src="../images/enchiladas.jpg" alt="A golden retriever puppy playing in a park">
+      <img class="enchiladas" src="../images/enchiladas.jpg" alt="enchiladas verdes with sour cream and cheese">
       <p class="description">Enchiladas are a traditional Mexican dish consisting of a corn tortilla rolled around a filling and covered with a chili-pepper sauce. The fillings can include a variety of ingredients like meats (beef, chicken), beans, rice, vegetables, or cheese. The dish is then served with the sauce poured over the top. </p>
       <h2>Ingredients</h2>
       <ul>
