--- a/recipes/pozole.html
+++ b/recipes/pozole.html
@@ -15,7 +15,7 @@
   <body>
     <div class="main">
       <h1>Pozole</h1>
-      <img class="pozole" src="../images/pozole.jpg" alt="A golden retriever puppy playing in a park">
+      <img class="pozole" src="../images/pozole.jpg" alt="pozole rojo">
       <p class="description">Pozole (or posole) is a traditional and hearty Mexican soup or stew with pre-Columbian origins, centered around tender hominy (large corn kernels) and meat, typically pork or chicken. It is known for gathering people together and is often a staple during holidays and celebrations.</p>
       <h2>Ingredients</h2>
       <ul>
